# python-writing-functions

./: README.md  pyproject.toml
wf/: holidays.py  order_food.py  validate_card.py
